--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "fmt": "prettier ./src --write",
     "fmt:css": "stylelint ./**/*.{css,scss} --fix"
   },
-  "dependencies": {},
+  "dependencies": {
+    "docx": "^8.5.0"
+  },
   "devDependencies": {
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
+    "@types/node": "^20.16.2",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -48,14 +50,15 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "html-react-parser": "^5.1.12",
-    "prettier": "^3.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "prettier": "^3.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "save-as": "^0.1.8",
     "stylelint": "^16.2.1",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-sass-guidelines": "^11.0.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.4",
+    "typescript": "^5.5.4",
     "vite": "^5.2.13",
     "vite-plugin-dts": "^3.9.1"
   }
