--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wunderwa/lexical-json",
-  "version": "0.6.2",
+  "version": "0.7.0",
   "description": "Facebook Lexical: JSON to html convertor, TypeScript library",
   "author": "Andrei Zagoruiko <adkrix@gmail.com> (https://zor.su)",
   "homepage": "https://github.com/wunderwa/lexical-json",
@@ -26,8 +26,8 @@
     "dist"
   ],
   "scripts": {
-    "dev": "tsc && vite build --watch",
-    "start": "vite --host --open",
+    "dev": "vite --host --open",
+    "watch": "tsc && vite build --watch",
     "build": "tsc && vite build",
     "build:types": "dts-bundle-generator --config ./dts-bundle-generator.config.ts",
     "lint:scripts": "eslint ./src --ext .ts",
@@ -36,30 +36,30 @@
     "fmt:css": "stylelint ./**/*.{css,scss} --fix"
   },
   "dependencies": {
-    "docx": "^8.5.0"
+    "docx": "^9.3.0"
   },
   "devDependencies": {
-    "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "dts-bundle-generator": "^9.5.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.24.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "html-react-parser": "^5.1.12",
-    "prettier": "^3.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "html-react-parser": "^5.2.3",
+    "prettier": "^3.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "save-as": "^0.1.8",
     "stylelint": "^16.2.1",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-sass-guidelines": "^11.0.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.8.2",
-    "vite": "^5.4.14",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.6",
     "vite-plugin-dts": "^3.9.1"
   }
 }
