--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wunderwa/lexical-json",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "Facebook Lexical: JSON to html convertor, TypeScript library",
   "author": "Andrei Zagoruiko <adkrix@gmail.com> (https://zor.su)",
   "homepage": "https://github.com/wunderwa/lexical-json",
@@ -11,7 +11,8 @@
   "license": "MIT",
   "keywords": [
     "facebook",
-    "Lexical",
+    "lexical",
+    "react",
     "json",
     "html",
     "typescript",
